# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  sqlx-data.json
.autogit/logs/: log-18-9-2021-16-27-14.txt  log-18-9-2021-16-37-58.txt  log-18-9-2021-16-48-5.txt  log-18-9-2021-16-58-11.txt  log-18-9-2021-17-18-24.txt  log-18-9-2021-17-28-30.txt  log-18-9-2021-17-38-37.txt  log-18-9-2021-17-48-43.txt  log-18-9-2021-17-58-50.txt  log-18-9-2021-17-8-17.txt  log-18-9-2021-18-19-3.txt  log-18-9-2021-18-29-9.txt  log-18-9-2021-18-39-15.txt  log-18-9-2021-18-49-22.txt  log-18-9-2021-18-59-28.txt  log-18-9-2021-18-8-56.txt  log-18-9-2021-19-19-41.txt  log-18-9-2021-19-29-48.txt  log-18-9-2021-19-39-54.txt  log-18-9-2021-19-50-1.txt  log-18-9-2021-19-9-35.txt  log-18-9-2021-20-0-7.txt  log-18-9-2021-20-10-13.txt  log-18-9-2021-20-20-20.txt  log-18-9-2021-20-30-26.txt  log-18-9-2021-20-40-33.txt  log-18-9-2021-20-50-39.txt  log-18-9-2021-21-0-46.txt  log-18-9-2021-21-10-52.txt  log-18-9-2021-21-20-59.txt  log-18-9-2021-21-31-5.txt  log-18-9-2021-21-41-12.txt  log-18-9-2021-21-51-18.txt  log-18-9-2021-22-1-27.txt  log-18-9-2021-22-11-38.txt  log-18-9-2021-22-21-44.txt  log-18-9-2021-22-31-51.txt  log-18-9-2021-22-41-58.txt  log-18-9-2021-22-52-5.txt  log-18-9-2021-23-12-22.txt  (+190 more)
.github/workflows/: general.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: client.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
