[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.9"
actix-http = "3.0.0-beta.10"
serde = { version = "1", features = ["derive"]}
config = "0.11.0"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
log = "0.4.14"
tracing = {version = "0.1", features = ["log"]}
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.25", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.12"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "mysql",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2"
once_cell = "1.8.0"
reqwest = "0.11"
tokio = "1.12.0"
